Set priority loading for main project image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@ body {
   content: "";
   width: 100%;
   height: 100%;
-  background: #f08080;
+  background: #E53E6D;
   position: absolute;
   top: 0;
   left: 0;
